--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.6.1",
+    "classnames": "^2.2.6",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-easy-swipe": "0.0.18",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
