--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-easy-swipe": "0.0.18",
     "react-router-dom": "^5.1.2",
