--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.12.0",
     "react-easy-swipe": "0.0.18",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
